Clean up build process, included ability to sync to mobile on reload, uninstalled run-sequence.

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
                         <div class="search-field-container">
                             <input type="text" class="search-field">
                         </div>
-                        <button class="search-field-submit" type="submit"><i class="fa fa-search"></i></button>
+                        <a href class="btn search-field-submit" type="submit"><i class="fa fa-search"></i></a>
                     </form>
                 </div>
             </div>
@@ -160,10 +160,18 @@
         </div> <!-- /.row -->
     </main>
     <footer>
-        <div class="row container-fluid">
-            <div class="col-lg-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero ab, maiores dolores eius voluptatibus voluptates repudiandae molestiae consequuntur, consequatur asperiores quas commodi qui magnam numquam impedit. Cum, labore, perspiciatis!</div>
-            <div class="col-lg-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eaque iste, nihil voluptatem inventore accusamus officiis quod aut pariatur. Dignissimos, repellendus iste assumenda tempora asperiores deserunt id quia provident quo!</div>
-            <div class="col-lg-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident molestiae dolorum architecto ea. Facere ducimus laudantium eum, dolores, recusandae consequatur praesentium perspiciatis quos excepturi quo cumque quasi neque vel harum?</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident libero ab, maiores dolores eius voluptatibus voluptates repudiandae molestiae consequuntur, consequatur asperiores quas commodi qui magnam numquam impedit. Cum, labore, perspiciatis!
+                </div>
+                <div class="col-lg-4">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic eaque iste, nihil voluptatem inventore accusamus officiis quod aut pariatur. Dignissimos, repellendus iste assumenda tempora asperiores deserunt id quia provident quo!
+                </div>
+                <div class="col-lg-4">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident molestiae dolorum architecto ea. Facere ducimus laudantium eum, dolores, recusandae consequatur praesentium perspiciatis quos excepturi quo cumque quasi neque vel harum?
+                </div>
+            </div>
         </div>
     </footer>
 
