Add _accordion, _breakpoints, and _grid partials.

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Yale</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">        
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css styles/vendor.css -->
@@ -64,17 +64,17 @@
     <main class="container-fluid">
         <div class="row">
             <aside class="col-lg-4">
-                <nav class="list-group tiered-subnavigation">
+                <nav class="tiered-subnavigation">
                     <h3><a href="#" class="list-group-item">Applications</a></h3>
                     <ul>
-                        <li><a href="#" class="list-group-item">Flyerboard</a></li>
-                        <li><a href="#" class="list-group-item">Faculty Profile System</a></li>
-                        <li><a href="#" class="list-group-item">News System</a></li>
-                        <li><a href="#" class="list-group-item">Clinical Trials</a></li>
-                        <li><a href="#" class="list-group-item">Resource Scheduler</a></li>
-                        <li><a href="#" class="list-group-item">Event Calendar</a></li>
-                        <li><a href="#" class="list-group-item">Form Builder</a></li>
-                        <li><a href="#" class="list-group-item">Media Library</a></li>
+                        <li><a href="#">Flyerboard</a></li>
+                        <li><a href="#">Faculty Profile System</a></li>
+                        <li><a href="#">News System</a></li>
+                        <li><a href="#">Clinical Trials</a></li>
+                        <li><a href="#">Resource Scheduler</a></li>
+                        <li><a href="#">Event Calendar</a></li>
+                        <li><a href="#">Form Builder</a></li>
+                        <li><a href="#">Media Library</a></li>
                     </ul>
                 </nav>
 
