Add Yale color variables, replace values for modular variables, replace px values with rem, add accessibility bar, aside menu, used box-shadow to create header styles in sidebar.

--- a/app/index.html
+++ b/app/index.html
@@ -59,8 +59,10 @@
     <main class="container-fluid">
         <div class="row">
             <aside class="col-lg-4">
-                <nav class="tiered-subnavigation">
-                    <h4><a href="#" class="list-group-item">Applications</a></h4>
+                <nav class="tiered-subnavigation module-primary">
+                    <header>
+                        <h4><a href="#">Applications</a></h4>    
+                    </header>
                     <ul>
                         <li><a href="#">Flyerboard</a></li>
                         <li><a href="#">Faculty Profile System</a></li>
@@ -124,7 +126,7 @@
                     </ul>
                 </div>
 
-                <section class="article-body">
+                <section class="content-body">
                     <h3>Flyerboard</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -217,7 +219,6 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
-    <!-- endbuild -->
 
     <!-- build:js scripts/plugins.js -->
     <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
