Tinkering with topper dropdown. Not finished.

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 						Information For
 						<i class="fa fa-caret-down"></i>
 					  </a>
-					  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+					  <ul class="dropdown-menu" role="menu">
 						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Prospective Students</a></li>
 						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Current Students &amp;<br> Trainees</a></li>
 						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Faculty &amp; Staff</a></li>
